# jibiki

./: .gitignore  ATTRIBUTION.md  CLAUDE.md  DATA-LICENSE.md  Gemfile  LICENSE  NOTICE  PROGRESS.md  README.md  Rakefile  japanese-ukrainian-org-dictionary.md  pyproject.toml
.github/workflows/: ci.yml
assets/audio/: manifest.org
docs/: export-formats.md  houhou-integration.md  japanese-ukrainian-org-dictionary.md  n5-batch-processing-guide.md  n5-entry-agent.md  org-format.md
entries/1000/: 1000320-asoko.org  1000420-ano.org  1000580-are.org
entries/1001/: 1001140-ee.org  1001710-okashi.org  1001820-okane.org  1001830-oniisan.org  1001990-oneesan.org
entries/1002/: 1002100-otearai.org  1002120-omawarisan.org  1002330-obaasan.org  1002430-ocha.org  1002590-otousan.org  1002610-onaka.org  1002650-okaasan.org
entries/1004/: 1004500-kochira.org  1004880-konna.org
entries/1005/: 1005110-saa.org  1005900-jaa.org
entries/1006/: 1006670-soko.org  1006730-soshite.org  (+4 more)
jisho_catalog/: __init__.py  catalog.py  jmdict.py
lib/: org_entry.rb
scripts/: __init__.py  build_catalog.py  export_houhou_overlay.rb  export_rich_db.rb  extract_jmdict.rb  extract_n5_batch.rb  extract_warodai.rb  extract_word.rb  fetch_jmdict.py  migrate_schema_v2.rb  scaffold_entry.rb  source_cli.rb  validate_entry.rb
test/: dictionary_sources_test.rb  extract_word_cli_test.rb  houhou_overlay_test.rb  houhou_vocab_matcher_test.rb  org_entry_corpus_smoke_test.rb  org_entry_document_test.rb  org_entry_test.rb  rich_sqlite_exporter_test.rb  validate_entry_cli_test.rb
tests/: test_jmdict.py
(+644 files in other folders)
